# CentralizedAppraiser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
assets/: data.json  output.csv
examples/1_AppraiserDocx/: Centralized Appraiser.docx  README.md  data.json  runner.py
examples/1_AppraiserDocx/utils/: _geometry.py  _imageClients.py  _imageGen.py  _intersectingTiles.py
src/: redunTesting.py  runner.py
src/CentralizedAppraiser/: README.md  __init__.py  testIJSON.py  utils.py
src/CentralizedAppraiser/UnitedStates/: __init__.py
src/CentralizedAppraiser/UnitedStates/Florida/: __init__.py
src/CentralizedAppraiser/UnitedStates/Florida/Broward/: __init__.py  collect.py  generate.py
src/CentralizedAppraiser/UnitedStates/Florida/Broward/_examples/: 494229030620.json  504109270060.json  504115280010.json  AddressSearch.json
src/CentralizedAppraiser/UnitedStates/Florida/MiamiDade/: __init__.py  collect.py  generate.py
src/CentralizedAppraiser/UnitedStates/Florida/MiamiDade/_examples/: 1079160030960.json  1678240260150.json  3078150000422.json  folioSearch.json  otherFolioSearch.json
src/CentralizedAppraiser/abstracts/: __init__.py  _address.py  _client.py  _exceptions.py  _location.py  _proxy.py
src/CentralizedAppraiser/abstracts/clients/: regrid.json
tests/: DeleteMe.py  creds.txt  listOfIDs.py  placeIDs.txt  testProxy.py  test_centralized_appraiser.py
